--- a/1选卡付款.html
+++ b/1选卡付款.html
@@ -49,7 +49,7 @@
             <span class="mui-icon iconfont icon-jiantou-xia"></span>
         </div>
         <h1 class="mui-title">首付通支付</h1>
-        <button class="mui-btn mui-btn-blue mui-btn-link mui-pull-right">支付管理</button>
+        <button class="mui-btn mui-btn-blue mui-btn-link mui-pull-right"></button>
     </header>
     <!-- 主体部分 -->
     <main class="bw_cj mui-content">
@@ -84,7 +84,7 @@
                     </li>
                     <li class="mui-table-view-cell mui-media ">
                         <div class="df">
-                            <img class="" src="./images/bjns_bank.png" alt="">
+                            <img class="" src="./img/zgyh.png" alt="">
                             <span class="bank_center">
                                 <span class="text_black">中国银行</span>
                                 <span>储蓄卡（9001）</span>
@@ -95,7 +95,7 @@
                     </li>
                     <li class="mui-table-view-cell mui-media">
                         <div class="df">
-                            <img class="" src="./images/bjns_bank.png" alt="">
+                            <img class="" src="./img/jsyh.png" alt="">
                             <span class="bank_center">
                                 <span class="text_black">建设银行</span>
                                 <span>储蓄卡（0021）</span>
@@ -105,7 +105,7 @@
                     </li>
                     <li class="mui-table-view-cell mui-media">
                         <div class="df">
-                            <img class="" src="./images/bjns_bank.png" alt="">
+                            <img class="" src="./img/gsyh.png" alt="">
                             <span class="bank_center">
                                 <span class="text_black">中国工商银行</span>
                                 <span>储蓄卡（0021）</span>
@@ -122,7 +122,7 @@
                         </span> -->
                         <a class="mui-navigate-right" href="#">
                             <p>添加银行卡付款</p>
-                            <p>光大银行首单每满100减20</p>
+                            <p class="font_color_red">光大银行首单每满100减20</p>
                         </a>
                         <div class="mui-collapse-content">
                             <p>添加银行卡付款</p>
@@ -135,13 +135,13 @@
                 </ul>
                 <div class="fill-10"></div>
                 <div class="oterPay">其他方式支付</div>
-                <ul class="bank_list mui-table-view mui-table-view-chevron">
-                    <li class="mui-table-view-cell mui-media df">
-                        <img class="" src="./images/bjns_bank.png" alt="">
+                <ul class="otherList mui-table-view mui-table-view-chevron">
+                    <li class="mui-table-view-cell mui-media df_left">
+                        <img class="" src="./img/zfb.png" alt="">
                         <label class="ml_8 text_black">支付宝支付</label>
                     </li>
-                    <li class="mui-table-view-cell mui-media df">
-                        <img class="" src="./images/bjns_bank.png" alt="">
+                    <li class="mui-table-view-cell mui-media df_left">
+                        <img class="" src="./img/weixin.png" alt="">
                         <label class="ml_8 text_black">微信支付</label>
                     </li>
                     
@@ -150,7 +150,7 @@
             
         </div>
         <div class="btnBox">
-            <button id="confirmBtn" class="btn_red mui-btn mui-btn-block">确认支付</button>
+            <button id="confirmBtn" class="btn_red mui-btn mui-btn-block">确认支付90元</button>
         </div>
     </main>
 </body>
