--- a/8二次绑卡.html
+++ b/8二次绑卡.html
@@ -40,24 +40,17 @@ color: #F35545;
         <div class="mui-scroll-wrapper">
             <div class="mui-scroll newBank">
                 <p>请持卡人绑定本人的银行卡</p>
+                <div class="bankno bankName bd_1 mui-input-row">
+                    <span>持卡人</span>
+                    <span>张三</span>
+                </div>
                 <div class="bankno mui-input-row">
                     <span>银行卡号</span>
                     <span class="line_addbank"></span>
                     <input type="text" class="mui-input-clear " placeholder="请输入本人银行卡号">
-                    <img class="bf_icon" src="./img/tanhao.png" alt="" id="">
-
+                    <!-- <img class="bf_icon" src="./images/iocn_wenhao@2x.png" alt="" id="showTitle"> -->
                 </div>
-                <!-- <ul class="cj_list mui-table-view mui-table-view-chevron">
-                    <li class="mui-table-view-cell mui-media ">
-                        <div class="mui-input-row ">
-                            <label>银行卡号</label>
-                            <input type="text" class="mui-input-clear " placeholder="请输入银行预留的手机号">
-                            <span class="bf_icon_span" id="showTitle">
-                                <img class="bf_icon" src="./images/iocn_wenhao@2x.png" alt="">
-                            </span>
-                        </div>
-                    </li>
-                </ul> -->
+                
             </div>
         </div>
         <!-- <button id="confirmBtn" class="btn_gray mui-btn mui-btn-block mt_50">下一步</button> -->
