--- a/9-二次绑卡验证身份.html
+++ b/9-二次绑卡验证身份.html
@@ -45,8 +45,8 @@ padding: 0 10px!important;
 z-index: 9;
 }
 span.mui-pull-right {
-    width: 30%;
-    padding-right: 4%;
+width: 30%;
+padding-right: 4%;
 }
 </style>
 
@@ -64,8 +64,8 @@ span.mui-pull-right {
     <main class="addbankCard gl_jbyhk mui-content">
         <div class="mui-scroll-wrapper">
             <div class="mui-scroll">
-                <div class="pl_4 jsyzm">接收验证码：13899999302</div>
-                <div class="gray_title pl_4">绑卡银行需要进行短信确认</div>
+                <div class="pl_4 jsyzm">已发送至手机验证码：13899999302</div>
+                <div class="gray_title pl_4">请输入验证码已验证身份</div>
                 <ul class="gl_mmk">
                     <input class="pwd_inp" type="password" maxlength="6" value="">
                     <li>
@@ -96,7 +96,7 @@ span.mui-pull-right {
                     <a href="#" id="notSend" class="mui-pull-left pl_4 red_ED6253">收不到验证码？</a>
                     <span class="mui-pull-right">
                         <a href="#" class="mui-pull-right pr_4 hide gray_A0A0A0">重新发送（54）</a>
-                        <a href="#" class="mui-pull-right pr_4 red_ED6253 sendCode">重新发送验证码</a>
+                    <a href="#" class="mui-pull-right pr_4 red_ED6253 sendCode">重新发送验证码</a>
                     </span>
                 </div>
                 <button id="confirmBtn" class="btn_red_gray mui-btn mui-btn-block">下一步</button>
