--- a/9-收不到验证码.html
+++ b/9-收不到验证码.html
@@ -176,6 +176,16 @@ span.mui-pull-right {
         $$(this).siblings(".gray_A0A0A0").removeClass("hide")
         $$(this).css("margin-top", "17px")
     })
+
+    $$("#notSend").on("tap", function () {
+        $$(".mask").removeClass("hide")
+        $$(".custom_popup").addClass("animate_pup")
+
+        $$("#mui_close").on("tap", function () {
+            $$(".mask").addClass("hide")
+            $$(".custom_popup").removeClass("animate_pup")
+        })
+    })
     // var h1 = "<div class=\"zdy_dlg\"><img src=\"./images/icon_chenggong@2x.png\"> <p>重置密码成功！</p></div>"
     // mui.toast(h1, {
     //     duration: 'short',
