--- a/1选卡付款.html
+++ b/1选卡付款.html
@@ -64,7 +64,7 @@
             </div>
             <div class="syt1">
                 <span class="dd_title">优惠</span>
-                <span class="zf_money sjlj">随机立减</span>
+<span class="zf_money sjlj">-¥ 10.00</span>
             </div>
             <div class="syt1">
                 <span class="dd_title2">待支付金额</span>
@@ -78,9 +78,9 @@
                     <li class="mui-table-view-cell mui-media ">
                         <div class="df">
                             <img class="" src="./images/bjns_bank.png" alt="">
-                            <label class="ml_8 text_black">北京农商银行</label>
+                            <label class="ml_8 text_black">首付通账户余额支付</label>
                         </div>
-                        <img class="hook" src="images/hook.png" />
+                        <img class="hook" src="./img/selected.png" />
                     </li>
                     <li class="mui-table-view-cell mui-media ">
                         <div class="df">
@@ -91,7 +91,7 @@
                             </span>
                             <label class="text_red">每满100减10元</label>
                         </div>
-                        <img class="hook" src="images/hook.png" />
+                        <img class="hook" src="./img/selected.png" />
                     </li>
                     <li class="mui-table-view-cell mui-media">
                         <div class="df">
@@ -101,7 +101,7 @@
                                 <span>储蓄卡（0021）</span>
                             </span>
                         </div>
-                        <img class="hook" src="images/hook.png" />
+                        <img class="hook" src="./img/selected.png" />
                     </li>
                     <li class="mui-table-view-cell mui-media">
                         <div class="df">
@@ -112,14 +112,16 @@
                             </span>
                             <label class="text_red">工商银行卡首单支付9折</label>
                         </div>
-                        <img class="hook" src="images/hook.png" />
+                        <img class="hook" src="./img/selected.png" />
                     </li>
-                    <li class="mui-table-view-cell mui-media  mui-collapse last_item">
-                        <!-- <img class="" src="./images/bjns_bank.png" alt=""> -->
-                        <!-- <span class="bank_center ml_33">
-                            <span class="text_black">添加银行卡付款</span>
-                            <span>光大银行首单每满100减20</span>
-                        </span> -->
+                    <li class="mui-table-view-cell mui-media   last_item">
+                        <a class="mui-navigate-right" href="#">
+                            <p>添加银行卡付款</p>
+                            <p class="font_color_red">光大银行首单每满100减20</p>
+                        </a>
+                    </li>
+                    <!-- 以下备用 -->
+                    <!-- <li class="mui-table-view-cell mui-media  mui-collapse last_item">
                         <a class="mui-navigate-right" href="#">
                             <p>添加银行卡付款</p>
                             <p class="font_color_red">光大银行首单每满100减20</p>
@@ -131,7 +133,7 @@
                             <p>光大银行首单每满100减20</p>
                             <p>光大银行首单每满100减20</p>
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
                 <div class="fill-10"></div>
                 <div class="oterPay">其他方式支付</div>
