--- a/1选卡付款.html
+++ b/1选卡付款.html
@@ -64,7 +64,7 @@
             </div>
             <div class="syt1">
                 <span class="dd_title">优惠</span>
-<span class="zf_money sjlj">-¥ 10.00</span>
+                <span class="zf_money sjlj">-¥ 10.00</span>
             </div>
             <div class="syt1">
                 <span class="dd_title2">待支付金额</span>
@@ -77,7 +77,7 @@
                 <ul class="bank_list mui-table-view mui-table-view-chevron">
                     <li class="mui-table-view-cell mui-media ">
                         <div class="df">
-                            <img class="" src="./images/bjns_bank.png" alt="">
+                            <img class="" src="./img/logo.png" alt="">
                             <label class="ml_8 text_black">首付通账户余额支付</label>
                         </div>
                         <img class="hook" src="./img/selected.png" />
@@ -146,10 +146,10 @@
                         <img class="" src="./img/weixin.png" alt="">
                         <label class="ml_8 text_black">微信支付</label>
                     </li>
-                    
+
                 </ul>
             </div>
-            
+
         </div>
         <div class="btnBox">
             <button id="confirmBtn" class="btn_red mui-btn mui-btn-block">确认支付90元</button>
