--- a/15提现完整.html
+++ b/15提现完整.html
@@ -79,16 +79,20 @@ input {
                 </ul>
                 <div class="fill-25"></div>
                 <div class="showMoney">
-                    <div class="showMoney_top">转入金额（单位/元）</div>
+                    <div class="showMoney_top">提现金额（收取0.1%的服务费）</div>
                     <div class="fill-20"></div>
                     <div class="showMoney_bot">
                         <img src="./img/hbfh.png" alt="">
                         <input type="text">
                     </div>
-                    <div class="fill-30"></div>
+                    <!-- <div class="fill-30"></div> -->
+                    <div class="quanbutixian ">
+                        <span class="text_color_gray_20">服务费10.00元</span>
+                        <span>全部提现</span>
+                    </div>
                 </div>
                 <div class="fill-20"></div>
-                <button id="confirmBtn" class="btn_red mui-btn mui-btn-block">实时到账，确认充值</button>
+                <button id="confirmBtn" class="btn_red mui-btn mui-btn-block">两小时内到账，确认提现</button>
             </div>
         </div>
     </main>
