--- a/12交易记录.html
+++ b/12交易记录.html
@@ -14,9 +14,15 @@
 <body>
 
     <style>
-        .mui-control-content {
-            background-color: white;
-            min-height: 215px;
+        .mui-segmented-control.mui-segmented-control-inverted .mui-control-item {
+    border-right: 1px solid #efeff4;
+}
+        .mui-slider {
+            position: relative;
+            z-index: 1;
+            overflow: hidden;
+            width: 100%;
+            background: #fff;
         }
 
         .mui-control-content .mui-loading {
@@ -74,6 +80,7 @@
                 </a>
             </div>
             <div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-4"></div>
+            <div class="fill-20 bg_gray"></div>
             <div class="mui-slider-group">
                 <div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
                     <!-- <div id="scroll1" class="mui-scroll-wrapper"> -->
@@ -99,6 +106,26 @@
                             </div>
                             <span class="item_rt">-200</span>
                         </li>
+                        <li class="mui-table-view-cell mui-media jiaoyijilu">
+                            <div class="item_lf">
+                                <img src="./img/xf.png" alt="">
+                                <div>
+                                    <span>提现-斗鱼直播</span>
+                                    <span>2017-1-12 12:18:18</span>
+                                </div>
+                            </div>
+                            <span class="item_rt">-200</span>
+                        </li>
+                        <li class="mui-table-view-cell mui-media jiaoyijilu">
+                            <div class="item_lf">
+                                <img src="./img/tk.png" alt="">
+                                <div>
+                                    <span>退款</span>
+                                    <span>2017-1-12 12:18:18</span>
+                                </div>
+                            </div>
+                            <span class="item_rt">+200</span>
+                        </li>
 
                     </ul>
                     <!-- </div> -->
@@ -114,18 +141,37 @@
                         </div>
                     </div> -->
                     <ul class="cj_list mui-table-view mui-table-view-chevron">
-                        <li class="mui-table-view-cell mui-media bankInfo">
-                            <span>卡类型</span>
-                            <span>工商银行 储蓄卡</span>
+                        <li class="mui-table-view-cell mui-media jiaoyijilu">
+                            <div class="item_lf">
+                                <img src="./img/cz.png" alt="">
+                                <div>
+                                    <span>充值-生日管家</span>
+                                    <span>2017-1-12 12:18:18</span>
+                                </div>
+                            </div>
+                            <span class="item_rt">+200</span>
                         </li>
-                        <li class="mui-table-view-cell mui-media bankInfo">
-                            <span>卡类型</span>
-                            <span>工商银行 储蓄卡</span>
+                        <li class="mui-table-view-cell mui-media jiaoyijilu">
+                            <div class="item_lf">
+                                <img src="./img/xf.png" alt="">
+                                <div>
+                                    <span>提现-斗鱼直播</span>
+                                    <span>2017-1-12 12:18:18</span>
+                                </div>
+                            </div>
+                            <span class="item_rt">-200</span>
                         </li>
-                        <li class="mui-table-view-cell mui-media bankInfo">
-                            <span>卡类型</span>
-                            <span>工商银行 储蓄卡</span>
+                        <li class="mui-table-view-cell mui-media jiaoyijilu">
+                            <div class="item_lf">
+                                <img src="./img/xf.png" alt="">
+                                <div>
+                                    <span>提现-斗鱼直播</span>
+                                    <span>2017-1-12 12:18:18</span>
+                                </div>
+                            </div>
+                            <span class="item_rt">-200</span>
                         </li>
+
                     </ul>
                 </div>
                 <div id="item3mobile" class="mui-slider-item mui-control-content">
@@ -138,18 +184,27 @@
                         </div>
                     </div> -->
                     <ul class="cj_list mui-table-view mui-table-view-chevron">
-                        <li class="mui-table-view-cell mui-media bankInfo">
-                            <span>卡类型</span>
-                            <span>工商银行 储蓄卡</span>
+                        <li class="mui-table-view-cell mui-media jiaoyijilu">
+                            <div class="item_lf">
+                                <img src="./img/cz.png" alt="">
+                                <div>
+                                    <span>充值-生日管家</span>
+                                    <span>2017-1-12 12:18:18</span>
+                                </div>
+                            </div>
+                            <span class="item_rt">+200</span>
                         </li>
-                        <li class="mui-table-view-cell mui-media bankInfo">
-                            <span>卡类型</span>
-                            <span>工商银行 储蓄卡</span>
+                        <li class="mui-table-view-cell mui-media jiaoyijilu">
+                            <div class="item_lf">
+                                <img src="./img/xf.png" alt="">
+                                <div>
+                                    <span>提现-斗鱼直播</span>
+                                    <span>2017-1-12 12:18:18</span>
+                                </div>
+                            </div>
+                            <span class="item_rt">-200</span>
                         </li>
-                        <li class="mui-table-view-cell mui-media bankInfo">
-                            <span>卡类型</span>
-                            <span>工商银行 储蓄卡</span>
-                        </li>
+
                     </ul>
                 </div>
             </div>
