--- a/5首次绑卡.html
+++ b/5首次绑卡.html
@@ -58,6 +58,8 @@ color: #F35545;
                         </div>
                     </li>
                 </ul> -->
+                <button id="confirmBtn" class="btn_red_gray mui-btn mui-btn-block">下一步</button>
+
             </div>
         </div>
         <!-- <button id="confirmBtn" class="btn_gray mui-btn mui-btn-block mt_50">下一步</button> -->
