--- a/5首次绑卡.html
+++ b/5首次绑卡.html
@@ -23,6 +23,12 @@ color: #999;
 .mui-popup-button {
 color: #F35545;
 }
+.bankno {
+line-height: 1;
+}
+.bankno .bf_icon {
+margin-left: 22px;
+}
 </style>
 
 <body class="bg_gray">
