--- a/6身份验证.html
+++ b/6身份验证.html
@@ -42,6 +42,7 @@ color: #F35545;
 .bankno input {
     margin-left: 34px;
 }
+
 </style>
 
 <body class="bg_gray">
@@ -89,14 +90,22 @@ color: #F35545;
                     <div class="errpage_title">
                         持卡人信息
                     </div>
-                    <li class="mui-table-view-cell mui-media bankInfo">
-                        <span>姓名</span>
-                        <span class="font_color_222">张三</span>
+                    <li class="mui-table-view-cell mui-media">
+                        <div class="mui-input-row">
+                            <label>姓名 </label>
+                            <input type="text" class="mui-input-clear font_color_222" placeholder="请输入持卡人姓名">
+                        </div>
                     </li>
-                    <li class="mui-table-view-cell mui-media bankInfo afterNone">
+                    <li class="mui-table-view-cell mui-media">
+                        <div class="mui-input-row">
+                            <label>证件号 </label>
+                            <input type="text" value="6217 0021 9245 4082 781" class="mui-input-clear font_color_222" placeholder="请输入持卡人姓名">
+                        </div>
+                    </li>
+                    <!-- <li class="mui-table-view-cell mui-media bankInfo afterNone">
                         <span>证件号</span>
                         <span class="font_color_222">6217 0021 9245 4082 781</span>
-                    </li>
+                    </li> -->
                     <div class="fill-25 bg_gray"></div>
                     <li class="bankno mui-input-row">
                         <span>手机号</span>
