--- a/10-支持银行列表.html
+++ b/10-支持银行列表.html
@@ -92,6 +92,17 @@ box-sizing: content-box;
 padding-top: 74px;
 }
 }
+/* xr xsMax */
+@media only screen and (device-width: 414px) and (device-height: 896px) and (-webkit-min-device-pixel-ratio:2) {
+.header-nav {
+padding-top: 20px;
+box-sizing: content-box;
+}
+.mui-bar-nav~.mui-content {
+padding-top: 74px;
+}
+}
+
 .mui-scroll-wrapper {
 padding-top: 0;
 margin-top: 124px!important;
