--- a/10-解绑.html
+++ b/10-解绑.html
@@ -26,6 +26,16 @@ padding-top: 0;
 padding-top: 0!important;
 }
 }
+/* xr xsMax */
+@media only screen and (device-width: 414px) and (device-height: 896px) and (-webkit-min-device-pixel-ratio:2) {
+    .mui-content {
+padding-top: 0;
+}
+.mui-scroll-wrapper {
+padding-top: 0!important;
+}
+}
+
 .mui-bar .mui-btn-link {
 color: #293D51;
 }
