--- a/18-我的钱包.html
+++ b/18-我的钱包.html
@@ -40,6 +40,19 @@ margin-bottom: 47px;
         line-height: 64px;
     }
 }
+@media only screen and (device-width: 414px) and (device-height: 896px) and (-webkit-min-device-pixel-ratio:2) {
+    .mui-scroll-wrapper {
+        padding-top: 71px;
+        margin-bottom: 64px;
+    }
+    .wdqb_btn{
+        /* padding-bottom: 17px;
+        box-sizing: content-box; */
+        height: 64px;
+        line-height: 64px;
+    }
+}
+
 </style>
 
 <body class="">
