--- a/1选卡付款.html
+++ b/1选卡付款.html
@@ -37,6 +37,31 @@
         padding-top: 0 !important;
     }
 }
+@media only screen and (device-width: 414px) and (device-height: 896px) and (-webkit-min-device-pixel-ratio:2) {
+    .mui-scroll-wrapper {
+        padding-top: 0;
+    }
+    .mui-content {
+        padding-top: 0;
+    }
+    .mui-bar-nav ~ .mui-content {
+    padding-top: 88px;
+}
+    header {
+        height: 64px;
+        padding-top: 24px;
+        box-sizing: content-box;
+    }
+    /* 滚动区域 */
+    .mui-scroll-wrapper {
+        top: 266px !important;
+    }
+    .mui-scroll-wrapper {
+        padding-top: 0 !important;
+    }
+}
+}
+
 </style>
 
 <body class="bg_gray">
