--- a/6身份验证.html
+++ b/6身份验证.html
@@ -40,7 +40,7 @@ color: #F35545;
     opacity: 0;
 }
 .bankno input {
-    margin-left: 34px;
+    margin-left: 15px;
 }
 
 </style>
@@ -99,7 +99,7 @@ color: #F35545;
                     <li class="mui-table-view-cell mui-media">
                         <div class="mui-input-row">
                             <label>证件号 </label>
-                            <input type="text" value="6217 0021 9245 4082 781" class="mui-input-clear font_color_222" placeholder="请输入持卡人姓名">
+                            <input type="text" value="" class="mui-input-clear font_color_222" placeholder="请输入持卡人姓名">
                         </div>
                     </li>
                     <!-- <li class="mui-table-view-cell mui-media bankInfo afterNone">
