--- a/20-银行卡.html
+++ b/20-银行卡.html
@@ -52,31 +52,37 @@ color: #293D51;
             <div class="mui-scroll">
                 <div class="mui-content">
                     <div class="mui-row">
-                        <div class="mui-col-sm-12 mui-col-xs-12">
-                            <div class="card_info card_gh">
-                                <div class="card_text gh_bank">
+                        <div class="mui-col-sm-12 mui-col-xs-12 cardItems">
+                            <div class="card_info">
+                                <div class="card_text">
                                     <h3>工商银行</h3>
                                     <p>储蓄卡</p>
                                 </div>
                                 <p class="cardh">6227 **** **** **** 2020</p>
+                                <img class="BigImg" src="./images/gongshang@2x.png" alt="">
+                                <img class="smallImg" src="./images/gongshangyinhang.png" alt="">
                             </div>
                         </div>
-                        <div class="mui-col-sm-12 mui-col-xs-12">
-                            <div class="card_info card_js">
-                                <div class="card_text js_bank">
+                        <div class="mui-col-sm-12 mui-col-xs-12 cardItems">
+                            <div class="card_info">
+                                <div class="card_text">
                                     <h3>建设银行</h3>
                                     <p>储蓄卡</p>
                                 </div>
                                 <p class="cardh">6227 **** **** **** 2020</p>
+                                <img class="BigImg" src="./img/jiansheyinhang@2x.png" alt="">
+                                <img class="smallImg" src="./images/jiansheyinhang2x.png" alt="">
                             </div>
                         </div>
-                        <div class="mui-col-sm-12 mui-col-xs-12 last_bank_card">
-                            <div class="card_info card_bj">
-                                <div class="card_text bj_bank">
+                        <div class="mui-col-sm-12 mui-col-xs-12 cardItems">
+                            <div class="card_info">
+                                <div class="card_text">
                                     <h3>北京银行</h3>
                                     <p>储蓄卡</p>
                                 </div>
                                 <p class="cardh">6227 **** **** **** 2020</p>
+                                <img class="BigImg" src="./img/beijingyinhang@2x.png" alt="">
+                                <img class="smallImg" src="./images/beijingyinhang2x.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -95,6 +101,17 @@ color: #293D51;
         mui.init()
         mui.init({
             swipeBack: true //启用右滑关闭功能
+        });
+
+        // 弹性插件
+        mui('.mui-scroll-wrapper').scroll({
+            scrollY: true, //是否竖向滚动
+            scrollX: false, //是否横向滚动
+            startX: 0, //初始化时滚动至x
+            startY: 0, //初始化时滚动至y
+            indicators: false, //是否显示滚动条
+            deceleration: 0.0006, //阻尼系数,系数越小滑动越灵敏
+            bounce: true //是否启用回弹
         });
 
     })
