--- a/21-银行卡详情.html
+++ b/21-银行卡详情.html
@@ -40,20 +40,22 @@ color: #293D51;
         <h1 class="mui-title"></h1>
         <button class="mui-btn mui-btn-blue mui-btn-link mui-pull-right">解绑</button>
     </header>
-    
+
     <!-- 主体部分 -->
     <main class="bw_cj mui-content">
         <div class="mui-scroll-wrapper">
             <div class="mui-scroll">
                 <div class="mui-content">
                     <div class="mui-row">
-                        <div class="mui-col-sm-12 mui-col-xs-12">
-                            <div class="card_info card_gh">
-                                <div class="card_text gh_bank">
+                        <div class="mui-col-sm-12 mui-col-xs-12 cardItems">
+                            <div class="card_info">
+                                <div class="card_text">
                                     <h3>工商银行</h3>
                                     <p>储蓄卡</p>
                                 </div>
                                 <p class="cardh">6227 **** **** **** 2020</p>
+                                <img class="BigImg" src="./images/gongshang@2x.png" alt="">
+                                <img class="smallImg" src="./images/gongshangyinhang.png" alt="">
                             </div>
                         </div>
                         <div class="mui-col-sm-12 mui-col-xs-12">
