--- a/6身份验证.html
+++ b/6身份验证.html
@@ -139,6 +139,16 @@ color: #F35545;
         mui.init({
             swipeBack: true //启用右滑关闭功能
         });
+        // 弹性插件
+        mui('.mui-scroll-wrapper').scroll({
+            scrollY: true, //是否竖向滚动
+            scrollX: false, //是否横向滚动
+            startX: 0, //初始化时滚动至x
+            startY: 0, //初始化时滚动至y
+            indicators: false, //是否显示滚动条
+            deceleration: 0.0006, //阻尼系数,系数越小滑动越灵敏
+            bounce: true //是否启用回弹
+        });
         document.getElementById("showTitle").addEventListener('tap', function () {
             mui.alert('银行卡预留手机号是在银行办卡时填写的手机号， 若遗忘、 换号可联 系银行客服电话处理 ', '手机号说明 ', '我知道了', function () {});
         });
