--- a/10-解绑.html
+++ b/10-解绑.html
@@ -90,7 +90,16 @@ color: #293D51;
         mui.init({
             swipeBack: true //启用右滑关闭功能
         });
-
+// 弹性插件
+        mui('.mui-scroll-wrapper').scroll({
+            scrollY: true, //是否竖向滚动
+            scrollX: false, //是否横向滚动
+            startX: 0, //初始化时滚动至x
+            startY: 0, //初始化时滚动至y
+            indicators: false, //是否显示滚动条
+            deceleration: 0.0006, //阻尼系数,系数越小滑动越灵敏
+            bounce: true //是否启用回弹
+        });
     })
 </script>
 
