--- a/12交易记录.html
+++ b/12交易记录.html
@@ -83,8 +83,8 @@
             <div class="fill-20 bg_gray"></div>
             <div class="mui-slider-group">
                 <div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
-                    <!-- <div id="scroll1" class="mui-scroll-wrapper"> -->
-                    <!-- <div class="mui-scroll"> -->
+                    <div id="scroll1" class="mui-scroll-wrapper">
+                    <div class="mui-scroll">
                     <ul class="cj_list mui-table-view mui-table-view-chevron">
                         <li class="mui-table-view-cell mui-media jiaoyijilu">
                             <div class="item_lf">
@@ -128,8 +128,8 @@
                         </li>
 
                     </ul>
-                    <!-- </div> -->
-                    <!-- </div> -->
+                    </div>
+                    </div>
                 </div>
                 <div id="item2mobile" class="mui-slider-item mui-control-content">
                     <!-- <div id="scroll2" class="mui-scroll-wrapper">
