--- a/smrz.html
+++ b/smrz.html
@@ -55,7 +55,7 @@
 		<div id="closeSyt" class="mui-pull-left">
 			<span class="mui-icon iconfont icon-jiantou-xia"></span>
 		</div>
-		<h1 class="mui-title">我的钱包</h1>
+		<h1 class="mui-title"></h1>
 	</header>
 	<!-- 主体部分 -->
 	<main class="addbankCard mui-content">
