--- a/smrz.html
+++ b/smrz.html
@@ -50,7 +50,7 @@
 <body class="">
 	<div class="mask hide"></div>
 	<!-- 带返回与头部的header -->
-	<header class="mui-bar mui-bar-nav header-nav bd_1">
+	<header class="mui-bar mui-bar-nav header-nav">
 		<div class="fill-20" id="fillHeader"></div>
 		<div id="closeSyt" class="mui-pull-left">
 			<span class="mui-icon iconfont icon-jiantou-xia"></span>
