--- a/15提现完整.html
+++ b/15提现完整.html
@@ -84,7 +84,8 @@ input {
                     <div class="showMoney_bot">
                         <img src="./img/hbfh.png" alt="">
                         <!-- <input type="text"> -->
-                        <span class="txwz_money">10000.00</span>
+                        <!-- <span class="txwz_money">10000.00</span> -->
+                        <input type="number">
                     </div>
                     <!-- <div class="fill-30"></div> -->
                     <div class="quanbutixian ">
