--- a/15提现完整.html
+++ b/15提现完整.html
@@ -85,7 +85,7 @@ input {
                         <img src="./img/hbfh.png" alt="">
                         <!-- <input type="text"> -->
                         <!-- <span class="txwz_money">10000.00</span> -->
-                        <input type="number">
+                        <input type="number" value="12345678">
                     </div>
                     <!-- <div class="fill-30"></div> -->
                     <div class="quanbutixian ">
